--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,6 +15,10 @@ html {
 body {
   box-sizing: border-box;
   padding: 2rem;
+
+  @media only screen and (max-width: $bp-smaller) {
+    padding: 0;
+  }
 }
 
 .container {
