--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -6,6 +6,14 @@
     padding: 13rem 2rem;
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 
+    @media only screen and (max-width: $bp-larger) {
+      padding: 17rem 2rem 13rem 2rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      padding: 18rem 2rem 15rem 2rem;
+    }
+
     @media only screen and (max-width: $bp-medium) {
       clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 97%);
     }
@@ -20,8 +28,11 @@
     position: relative;
     padding-left: 10rem;
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       padding-left: 0;
+    }
+
+    @media only screen and (max-width: $bp-medium) {
       text-align: left;
     }
   }
@@ -32,15 +43,21 @@
     top: 9rem;
     transform: rotate(-90deg);
 
+    @media only screen and (max-width: $bp-large) {
+      left: 33rem;
+      top: -10rem;
+      transform: rotate(-7deg);
+    }
+
     @media only screen and (max-width: $bp-medium) {
       font-size: 4rem;
-      left: 29rem;
-      top: -8rem;
+      left: 26rem;
+      top: -10rem;
       transform: rotate(-4deg);
     }
 
     @media only screen and (max-width: $bp-small) {
-      left: 20rem;
+      left: 16rem;
       transform: rotate(-6deg);
     }
 
@@ -99,6 +116,10 @@
     &--right {
       margin-top: -7rem;
 
+      @media only screen and (max-width: $bp-larger) {
+        margin-top: -6.5rem;
+      }
+
       @media only screen and (max-width: $bp-medium) {
         margin-top: 0;
       }
@@ -120,6 +141,14 @@
   &__text {
     font-size: 2rem;
     font-weight: 400;
+
+    @media only screen and (max-width: $bp-larger) {
+      font-size: 1.6rem;
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 2rem;
+    }
 
     &--desktop {
       @media only screen and (max-width: $bp-medium) {
