--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,6 +2,10 @@
   max-width: $grid-width;
   margin: 0 auto;
 
+  @media only screen and (min-width: $bp-largest) {
+    max-width: 170rem;
+  }
+
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
 
