--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -184,6 +184,10 @@
       color: $color-black;
       padding: 1rem;
 
+      @media only screen and (min-width: $bp-largest) {
+        font-size: 2.5rem;
+      }
+
       @media only screen and (max-width: $bp-medium) {
         color: $color-white;
       }
@@ -205,6 +209,10 @@
       text-decoration: none;
       text-transform: uppercase;
       transition: .2s all ease-out;
+
+      @media only screen and (min-width: $bp-largest) {
+        font-size: 2.5rem;
+      }
 
       @media only screen and (max-width: $bp-medium) {
         color: $color-white;
