--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,9 +7,9 @@ body {
 }
 
 .heading-primary {
+  font-size: 2rem;
   color: $color-white;
   text-transform: uppercase;
-  margin-bottom: 6rem;
   backface-visibility: hidden;
 }
 
