--- a/sass/components/_section-break.scss
+++ b/sass/components/_section-break.scss
@@ -14,6 +14,11 @@
     float: left;
     padding-left: 6rem;
     margin-top: -5rem;
+
+    @media only screen and (max-width: $bp-smallest) {
+      float: none;
+      margin-top: 0;
+    }
   }
 
   &--animated {
@@ -24,6 +29,10 @@
     width: 6rem;
     transform: translateY(0);
     transition: 0.5s ease-in;
+
+    @media only screen and (max-width: $bp-smallest) {
+      width: 4rem;
+    }
 
     &:hover {
       transform: translateY(3rem);
