--- a/sass/layout/_cases.scss
+++ b/sass/layout/_cases.scss
@@ -1,7 +1,11 @@
 .cases {
   margin: 5rem 0;
 
-  &__container {
+  @media only screen and (max-width: $bp-smallest) {
+    margin: 0;
+  }
+
+  &__background {
     position: relative;
     background-color: $color-primary-light;
     padding: 6rem 3rem 8rem 3rem;
@@ -29,7 +33,7 @@
 
     @media only screen and (max-width: $bp-smaller) {
       clip-path: polygon(0 0%, 100% 3.5%, 100% 100%, 0 97%);
-      padding: 6rem 1rem 8rem 1rem;
+      padding: 4rem 1rem 8rem 1rem;
     }
   }
 
@@ -62,8 +66,8 @@
     }
 
     @media only screen and (max-width: $bp-smallest) {
-      font-size: 2.5rem;
-      transform: rotate(9deg);
+      font-size: 2rem;
+      transform: rotate(10.5deg);
     }
 
   }
@@ -111,12 +115,12 @@
         width: 65rem;
       }
 
-      @media only screen and (max-width: $bp-smaller) {
-        height: 55rem;
-      }
-
       @media only screen and (max-width: $bp-small) {
         margin-top: 10rem;
+      }
+
+      @media only screen and (max-width: $bp-smaller) {
+        height: 55rem;
       }
     }
 
@@ -137,6 +141,10 @@
 
       @media only screen and (max-width: $bp-smaller) {
         height: 36rem;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        height: 44rem;
       }
     }
 
@@ -194,6 +202,14 @@
       box-shadow: 2px 3px 1px rgba(0,0,0,.3);
       opacity: 1.0;
     }
+
+    &:nth-of-type(2n) {
+      @media only screen and (max-width: $bp-smallest) {
+        background-color: $color-grey-dark;
+        color: $color-white;
+        border-radius: .5rem;
+      }
+    }
   }
 
   &__list-item:before {
@@ -217,6 +233,10 @@
       mask-image: url(../img/SVG/quill.svg);
       mask-size: cover;
       background-image: none;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      display: none;
     }
   }
 }
