--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,6 +1,10 @@
 .contact {
   margin-top: 8rem;
 
+  @media only screen and (max-width: $bp-smallest) {
+    margin-top: 0;
+  }
+
   &__background {
     background-color: $color-primary-light;
     padding: 13rem 2rem;
@@ -20,6 +24,11 @@
 
     @media only screen and (max-width: $bp-smaller) {
       padding-bottom: 16rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      padding-top: 12rem;
+      clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 93%);
     }
   }
 
@@ -67,9 +76,10 @@
     }
 
     @media only screen and (max-width: $bp-smallest) {
-      font-size: 3.5rem;
-      left: 9rem;
-      transform: rotate(-12deg);
+      font-size: 3rem;
+      top: -6rem;
+      left: 8rem;
+      transform: rotate(-13deg);
     }
   }
 
