--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -8,6 +8,7 @@
   &__background {
     background-color: $color-primary-light;
     padding: 13rem 2rem;
+    -webkit-clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 
     @media only screen and (max-width: $bp-larger) {
@@ -19,6 +20,7 @@
     }
 
     @media only screen and (max-width: $bp-medium) {
+      -webkit-clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 97%);
       clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 97%);
     }
 
@@ -28,6 +30,7 @@
 
     @media only screen and (max-width: $bp-smallest) {
       padding-top: 12rem;
+      -webkit-clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 93%);
       clip-path: polygon(0 8%, 100% 0, 100% 88%, 0 93%);
     }
   }
