--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,6 +22,35 @@
 
   @media only screen and (max-width: $bp-large) {
     height: 80vh;
+    -webkit-clip-path: none;
+    clip-path: none;
+    background:
+      linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat,
+      url(../img/hero.jpg) (0 -27rem)/cover no-repeat;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    background:
+    linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat,
+    url(../img/hero.jpg) (0 -23rem)/cover no-repeat;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    background:
+    linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat,
+    url(../img/hero.jpg) (0 -12rem)/cover no-repeat;
+  }
+
+  @media only screen and (max-width: $bp-smaller) {
+    background:
+    linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat,
+    url(../img/hero.jpg) (0 -5rem)/cover no-repeat;
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    background:
+    linear-gradient(173deg, transparent 80%, #f5f5f5 50%) no-repeat,
+    url(../img/hero.jpg) (0 -3rem)/cover no-repeat;
   }
 
   &__title {
